--- a/src/shared/components/Navigation/navLinks.css
+++ b/src/shared/components/Navigation/navLinks.css
@@ -10,7 +10,7 @@
 }
 
 .nav-control {
-    display: flex;
+    
     justify-content: center;
     text-align: center;
     align-items: center;
@@ -35,8 +35,12 @@
     background-color: rgb(210, 210, 35);
     text-align: center;
     border-radius: 5px;
-    padding: 0px 40px 0px 40px;
+    /* padding:  8px 8px 8px 8px;
+    
+    */
     margin:10px;
+    width: 90px;
+    height:35px;
     box-shadow: 0px 0px 2px 1px;
 }
 
@@ -44,7 +48,10 @@
     background-color: rgb(210, 210, 35);
     text-align: center;
     border-radius: 5px;
-    padding:  0px 40px 0px 40px;
+    /* padding:  8px 8px 8px 8px;
+     */
+    width: 90px;
+    height:35px;
     margin:10px;
     box-shadow: 0px 0px 2px 1px;
 }
