--- a/src/shared/components/Navigation/MainNavigation.css
+++ b/src/shared/components/Navigation/MainNavigation.css
@@ -57,8 +57,12 @@
   margin-right: 5px;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 300px) {
+  .nav-header{
+    width: 100px;
+  }
     .nav-title-container h1{
+
       display: none;
     }
 }
@@ -73,6 +77,7 @@
     text-overflow: ellipsis;
     max-width: 220px; 
   }
+  .nav-title-container span,
   .nav-title-container p{
     display: none;
   }
