--- a/src/main/home.css
+++ b/src/main/home.css
@@ -8,6 +8,9 @@
     overflow: hidden;
 
 }
+.mmm-m {
+    display: none;
+}
 .h1-text {
     color: black;
 }
@@ -21,7 +24,6 @@ img{
 .section-1 {
     display: block;
     width:20%;
-    /* border: 2px solid black; */
     border-radius: 10px;
     margin: 6px;
     padding: 20px;
@@ -32,7 +34,6 @@ img{
 }
 .section-2 {
     width: 75%;
-    /* border: 2px solid black; */
     margin: 0px;
     text-align: center;
     overflow: scroll;
@@ -47,7 +48,6 @@ img{
 }
 
 .cali-container {
-    /* border: 2px solid black; */
     border-radius: 10px;
     background-color: blanchedalmond;
     box-shadow: 0px ;
@@ -59,7 +59,41 @@ img{
 
 
 @media (max-width: 600px) {
-    .section-1 {
-        
+    .home{
+        border: none;
+        display:flex;
+        flex-direction: column;
     }
+    .section-1,
+    .section-3  {
+        display: none;
+    }
+    .section-2 {
+        width: 100%;
+    }
+    .menu-controller {
+        position: relative;
+        display: inline-block;
+    }
+    .mmm-m {
+        /* display: flex;  
+        text-align: left;
+        margin: 0px;
+        color: black; 
+        font-size: 2rem; */
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 2px 16px 0px rgba(0,0,0,0.2);
+        padding: 12px 16px;
+        z-index: 1;
+    }
+    .menu-controller:active .mmm-m{
+        display: block;
+    }
+    #icon-button {
+        display: block;
+    }
+    
 }
