--- a/src/main/components/items.css
+++ b/src/main/components/items.css
@@ -1,15 +1,30 @@
+.item-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 400px;
+    height: auto;
+    background-color: bisque;
+    margin:10px;
+    border-radius: 10px;
+    box-shadow: 1px 0.1px 8px 1px rgb(116, 115, 115);
+    /* transition: transform .2s; */
 
-.images{
+}
+
+.images-container {
+    width: 100%;
+   
+}
+
+.images-container img{
     display:flex;
     width: 100%;
     height: inherit;
     margin:0px;
     border-radius:10px 10px 0px 0px;
 }
-.images-container {
-    height:100%;
 
-}
 .names-title {
     background-color: rgb(158, 134, 134);
     border-radius: 0px 0px 10px 10px;
@@ -43,19 +58,7 @@
     transform:scale(1.3);
 }
 
-.item-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 300px;
-    height: 350px;
-    background-color: bisque;
-    margin:10px;
-    border-radius: 10px;
-    box-shadow: 1px 0.1px 8px 1px rgb(116, 115, 115);
-    /* transition: transform .2s; */
 
-}
 /* .item-container:hover{
     -ms-transform: scale(1.5);
     -webkit-transform: scale(1.5);
@@ -63,3 +66,21 @@
 } */
 
 
+@media (max-width: 768px) {
+    .item-container{
+        width: 80%;
+
+    }
+    .images-container{
+       width: 100%;
+    }
+}
+@media (max-width: 992px) {
+    .item-container{
+        display: flex;
+        
+    }
+    .images-container{
+       width: 100%;
+    }
+}
