--- a/src/main/home.css
+++ b/src/main/home.css
@@ -14,12 +14,12 @@
 .h1-text {
     color: black;
 }
-img{
+/* img{
     width:20rem;
     border-radius: 5%;
     align-items: center;
     margin: 0px;
-}
+} */
 
 .section-1 {
     display: block;
