--- a/src/shared/components/Navigation/navLinks.css
+++ b/src/shared/components/Navigation/navLinks.css
@@ -10,12 +10,10 @@
 }
 
 .nav-control {
-    
+    /* display: inline; */
     justify-content: center;
     text-align: center;
     align-items: center;
-
-    
 }
 
 .home-container {
@@ -25,7 +23,7 @@
     text-align: center;
     border-radius: 5px;
     padding: 4px;
-  
+
 }
 .home-container:hover{
     color:bisque
@@ -56,6 +54,23 @@
     box-shadow: 0px 0px 2px 1px;
 }
 
-.login-button {
+
+#login-button-cont {
     width: 80%;
 }
+
+.font-controller {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .font-controller{
+        display: block;
+        font-size: 2rem;
+        color: rgb(108, 108, 163)
+    }
+    #login-button-cont{
+        display: none;
+    }
+}
+
