--- a/src/auth/Auth.css
+++ b/src/auth/Auth.css
@@ -1,3 +1,29 @@
+
+.login-auth-container {
+    display: flex;
+  
+    justify-content: center;
+    margin: 24px
+    
+}
+.login-auth-form {
+    
+    background-color:rgb(206, 206, 206);
+    border-radius: 5px; 
+    box-shadow:10px 10px 15px rgba(0, 0, 0, 1.1);
+}
+
+.login-img-container {
+    width: 450px
+}
+
+.login-img-container img{
+  width: 100%;
+  height: auto;
+  border-radius: 5px 5px 0px 0px;
+  
+}
+
 button {
     /* width: 100%;
     height: 20px; */
@@ -11,37 +37,29 @@ button {
     width: 100%;
 }
 
-.container {
-    height: 70vh;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    position: relative;
-    display: flex;
-    padding: 20px
-
-}
-.login-form {
-    background-color:rgb(206, 206, 206);
-    position:absolute;
-    /* width: 500px; */
-    border-radius: 5px; 
-    box-shadow:10px 10px 15px rgba(0, 0, 0, 1.1);
-    /* border: 1px solid black */
-}
-
-.login-img-container {
-    justify-content: center;
-    display:flex;
-}
-
-.picture {
-  width: 100%;
-  border-radius: 5px 5px 0px 0px;
-  margin: 0px
-}
-
 
 .create-user {
     text-align:center;
+}
+
+
+@media (max-width: 768px){
+    .login-img-container{
+       width: 100%  
+    }
+    .login-auth-form{
+      width: 300px;
+    }     
+}
+
+@media (max-width: 1030px) and (min-width: 769px){
+    .login-img-container{
+        width: 100%  
+     }
+    .login-auth-form{
+        width: 300px;
+        height: auto;
+    
+    }
+    
 }
