--- a/src/auth/create-user.css
+++ b/src/auth/create-user.css
@@ -1,43 +1,25 @@
-button {
-    /* width: 100%;
-    height: 20px; */
-    background-color: rgb(55, 147, 240);
-    border-radius: 10%;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-}
+
 .h-1 {
     text-align: center;
     margin: 0px 5px 5px 0px;
     padding: 10px;
 
 }
-.user-container {
-    height: 70vh;
-    align-items: center;
-    justify-content: center;
+.create-user-container {
     display: flex;
-    position: relative;
-
+    justify-content: center;
 }
-.login-form {
+.create-login-form {
     background-color:rgb(206, 206, 206);
-    position:absolute;
-    width: 500px;
     border-radius: 5px; 
     box-shadow:10px 10px 15px rgba(0, 0, 0, 1.1);
 }
 
 .signup-img-container {
-    justify-content: center;
-    display:flex;
+    width: 450px
 }
 
-.picture {
+.signup-img-container img {
   width: 100%;
   height: 20vh;
   border-radius: 5px 5px 0px 0px;
@@ -65,7 +47,43 @@ input[type=text], input[type=new-password], input[type=email] {
     padding: 25px;
 }
 
+button {
+    background-color: rgb(55, 147, 240);
+    border-radius: 10%;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
 .already-user {
     text-align:center;
     margin-top: 10px;
+}
+
+@media (max-width: 768px){
+    .create-login-form{
+        width: 300px;
+        height: inherit;
+    }
+    .signup-img-container img{
+        display: none;
+    }
+}
+
+@media(max-width: 992px) and (min-width: 769px){
+    .create-login-form{
+        width: 300px;
+       
+    }
+    .signup-img-container{
+        width: 100%;
+    }
+}
+@media (max-width: 300px) {
+    .signup-img-container img{
+        display: none;
+    }
 }
