--- a/src/main/components/calendar.css
+++ b/src/main/components/calendar.css
@@ -1,10 +1,18 @@
-.dates {
-    width: 100%;
+.cale-container{
     display: flex;
-    justify-content: center;
-    text-align: center;
+    flex-direction: column;
+}
+.cale-date {
     align-items: center;
     padding:0px 5px 0px;
-   
+}
 
+
+@media (max-width: 768px) {
+    .cale-container{
+       width: 100%;
+    
+    }
+    
+    
 }
