--- a/src/main/components/mend.css
+++ b/src/main/components/mend.css
@@ -27,11 +27,12 @@ img{
     }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1200px)and (min-width: 769px) {
     .main-mend-container h4{
         font-size: 8px;
     }
     .main-mend-container p{
         font-size: 6px;
+    
     }
 }
