--- a/src/shared/components/FormElements/input.css
+++ b/src/shared/components/FormElements/input.css
@@ -2,12 +2,13 @@
     display: flex;
     flex-direction: column;
     text-align: left;
-    width: 100%;
+    /* width: 100%; */
+
 }
 
 
 .form-container input[type=email], input[type=current-password] {
-    width: 100%;
+    /* width: 100%; */
     border-radius: 5px;
     padding: 12px 20px;
     margin: 8px 0;
@@ -18,4 +19,12 @@
 
 .container-u-p {
     padding: 25px;
+}
+
+
+@media (max-width: 768px) {
+    
+    /* .container-u-p{
+        padding: 5px
+    } */
 }
