--- a/src/shared/components/Navigation/navLinks.css
+++ b/src/shared/components/Navigation/navLinks.css
@@ -33,9 +33,8 @@
     background-color: rgb(210, 210, 35);
     text-align: center;
     border-radius: 5px;
-    /* padding:  8px 8px 8px 8px;
-    
-    */
+   
+    line-height: 1.0;
     margin:10px;
     width: 90px;
     height:35px;
@@ -52,6 +51,7 @@
     height:35px;
     margin:10px;
     box-shadow: 0px 0px 2px 1px;
+    
 }
 
 
@@ -60,6 +60,14 @@
 }
 
 .font-controller {
+    display: none;
+}
+#Md-postAdd, #fa-edit{
+    font-size: 2rem;
+    display: none;
+}
+#fa-edit{
+    font-size: 1.5rem;
     display: none;
 }
 
@@ -72,5 +80,25 @@
     #login-button-cont{
         display: none;
     }
+    .updateNews-container p,
+    .addNews-container p{
+        display: none;
+    }
+    /* .font-controller,  */
+    #login-button-cont{
+        display: none;
+    }
+    #fa-edit, #Md-postAdd{
+        display: inline;
+        
+    }
+    .updateNews-container,
+    .addNews-container{
+        background-color: transparent;
+        box-shadow: none;
+        margin: 0px -10px;
+        display: inline;
+    }
+
 }
 
