--- a/src/main/components/calendar.css
+++ b/src/main/components/calendar.css
@@ -4,14 +4,13 @@
 }
 .cale-date {
     align-items: center;
-    padding:0px 5px 0px;
+    padding:0px 0px 0px;
 }
 
 
-@media (max-width: 768px) {
-    .cale-container{
-       width: 100%;
-    
+@media (max-width: 1300px) and (min-width: 769px) {
+    .cale-container h1{
+       font-size: medium;
     }
     
     
