--- a/src/main/components/course.css
+++ b/src/main/components/course.css
@@ -1,17 +1,13 @@
 .course-container {
-    display: block;  
-    width: 300px;
-    padding: 20px; 
-  
-    /* border: 2px solid black; */
-    /* background-color: aquamarine; */
+    display: inline-block;  
+    width:100%;
+    
+    
     
 
 }
 #button-control{
     font-size: small;
 }
-
-
 
 
