--- a/src/main/components/courseItem.css
+++ b/src/main/components/courseItem.css
@@ -31,7 +31,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: auto;
     margin: 0px 60px 10px;
     justify-content: center;
     border-radius: 90%;
@@ -58,4 +58,29 @@
     border-radius: 0px 0px 10px 10px; 
     padding: 8px;
     color: white
+}
+
+@media (max-width: 1280px) {
+    .main-container{
+        width: 100%;
+        height: 50%; 
+    }
+    /* .d-d-t,
+    .location{
+        display: none;
+    } */
+    .images-course{
+        width: 50%;
+        /* height: 40%; */
+    }
+    .title{
+        font-size: small;
+    }
+}
+@media (max-width: 1400px) {
+    .d-d-t,
+    .location
+    {
+       display: none;
+    }
 }
