Announce page and Logout function

--- a/src/main/components/itemsList.css
+++ b/src/main/components/itemsList.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: auto auto auto;
     justify-content: space-evenly;
+    text-decoration: none;
 }
 /* .ccc-c {
     background-color: black;
