--- a/src/shared/components/Navigation/navLinks.css
+++ b/src/shared/components/Navigation/navLinks.css
@@ -10,7 +10,7 @@
 }
 
 .nav-control {
-    /* display: inline; */
+    display: flex;
     justify-content: center;
     text-align: center;
     align-items: center;
