--- a/src/main/components/course.css
+++ b/src/main/components/course.css
@@ -5,5 +5,27 @@
 #button-control{
     font-size: small;
 }
-
-
+.slider-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 24px
+}
+@media (max-width: 768px) {
+    .course-container{
+        display: 'flex';       
+    } 
+    
+}
+@media(max-width: 1380px) and (min-width: 769px){
+    .course-container{
+       width: 240px;
+       height:300px;
+        
+    } 
+    .slider-container{  
+        width:100%;  
+        margin:0px
+    }
+}
