--- a/src/main/home.css
+++ b/src/main/home.css
@@ -3,15 +3,16 @@
     display: flex;
     padding: 2px;
     border: 4px solid black;
-    max-height:85vh;
+    /* max-height:85.9vh; */
     overflow: hidden;
+    scrollbar-width: none;
 
 }
 .mmm-m {
     display: none;
 }
 .h1-text {
-    color: black;
+    /* color: black; */
 }
 /* img{
     width:20rem;
@@ -34,7 +35,7 @@
 }
 .section-2 {
     width: 100%;
-    margin: 0px;
+   
     text-align: center;
     overflow: scroll;
     scrollbar-width: none;
@@ -43,12 +44,8 @@
 .section-3 {
     display: flex;
     flex-direction: column;
-    
     width:17%;
-
-    /* overflow: scroll; */
     text-align: center;
-    border: 2px solid black;
    
 }
 .cali-controller{
@@ -109,7 +106,8 @@
         height:300px;
     }
     .section-1{
-        width: 35%
+        width: 35%;
+        height: fit-content;
     }
     .section-3{
         width: 25%
@@ -122,9 +120,14 @@
         margin-right: 24px;
         padding: 2px;
         height: 250px;
-       
-       
-    
-        border: 2px solid black
     }
 }
+
+/* @media (max-width: 1870px) and (min-width: 1381px) {
+    .section-2 {
+        display: flex;
+        justify-content: space-evenly;
+        padding: 24px;
+        border: 2px solid black;
+    }
+} */
