--- a/src/pages/AddNews.css
+++ b/src/pages/AddNews.css
@@ -2,7 +2,8 @@
     padding:2%;
     background-color: rgb(197, 214, 250);
     max-width: 100%;
-    max-height: 100%;
+    min-height: 100%;
+    
 }
 
 .news-form-container {
