--- a/src/main/components/userItem.css
+++ b/src/main/components/userItem.css
@@ -1,7 +1,7 @@
 .user-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center;    
 }
 
 h1{
@@ -16,7 +16,8 @@ h1{
     width: 50%;
     height: 100%;
     border: 2px solid black;
-    padding: 24px
+    padding: 24px;
+    background-color: rgb(223, 202, 149);
 }
 
 .user-form textarea{
@@ -30,6 +31,9 @@ h1{
 @media (max-width: 768px) {
     .user-form-container{
         width: 70%
+    }
+    .user-form textarea{
+        width: 98%
     }
     
 }
